<resources>
    <string name="app_name">PneumoVision</string>
    <string name="register">Don\'t have an account? Register</string>
    <string name="signup">Not yet registered? SignUp Now</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signuptitle">Sign Up</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="Upload">Upload</string>
    <string name="namapasien">Masukkan Nama Pasien</string>
    <string name="usia">Masukkan Usia Pasien</string>
    <string name="next">Continue</string>
    <string name="success_login">SUKSES!</string>
    <string name="email_empty">Email is Empty\n</string>
    <string name="email_wrong">Email is Wrong</string>

    <string name="welcome_message">Welcome to PneumoVision app</string>
    <string name="find_resource">Find Your Resource\nHere</string>
    <string name="search_hint">Search</string>
    <string name="messages">Messages</string>
    <string name="favorites">Favorites</string>
    <string name="share">Share</string>
    <string name="date">20 June 2024</string>
    <string name="humidity">45%</string>
    <string name="day">Monday</string>
    <string name="home">Home</string>
    <string name="scan">X-Ray Scan</string>
    <string name="profile">Profile</string>
    <string name="searching_for">Searching for: %1$s</string>
    <string name="profile_clicked">Profile clicked</string>
    <string name="notifications_clicked">Notifications clicked</string>
    <string name="messages_clicked">Messages clicked</string>
    <string name="favorites_clicked">Favorites clicked</string>
    <string name="share_clicked">Share clicked</string>
    <string name="home_clicked">Home clicked</string>
    <string name="scan_clicked">X-Ray Scan clicked</string>
    <string name="profile_menu_clicked">Profile clicked</string>

    <!-- Profile Activity Strings -->
    <string name="user_name">Dewangga Rheza</string>
    <string name="user_email">Dewangga@gmail.com</string>
    <string name="notification">Notification</string>
    <string name="personal_information">Personal Information</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log Out</string>

    <!-- Email Activity Strings -->
    <string name="send_message">Send a Message</string>
    <string name="send_message_description">Send your message or file directly to the doctor in inbox</string>
    <string name="name_label">Name :</string>
    <string name="email_label">Email :</string>
    <string name="message_label">Message :</string>
    <string name="attach_file">Attach File</string>
    <string name="send_message_button">Send Message</string>
    <string name="title_profile">Profile\n</string>
    <string name="fullname">nama lengkap</string>
    <!--    <string name="username">fullname</string>-->
    <string name="title_sharingpage">menu sharing</string>
    <string name="title_history">History\n</string>
    <string name="title_scan">X-Ray Scan</string>
    <string name="title_home">Home\n</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">deskripsi</string>
    <string name="retry">Retry</string>
    <string name="emptyImage">Pilih Gambar Terlebih Dahulu.\n</string>
    <string name="emptyFields">Isikan data dengan benar terlebih dahulu\n</string>
    <string name="upload_xray">upload scan</string>
    <string name="success_profile_update">berhasil update\n</string>
    <string name="namapasientv">Nama Pasien</string>
    <string name="usiapasientv">Usia Pasien</string>
    <string name="kelamin">Kelamin</string>
    <string name="kelaminpasien">Kelamin Pasien</string>
    <string name="hasil_klasifikasi">Hasil klasifikasi</string>
    <string name="hasil_xray">Hasil Xray</string>
    <string name="hasil">Hasil</string>

    <string-array name="data_description">klasifikasi penyakit</string-array>
    <string-array name="data_name">nama penyakit</string-array>
    <string-array name="data_photo">image</string-array>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="data_riders">
        <item>Alex Marquez</item>
        <item>Francesco Bagnaia</item>
        <item>Brad Binder</item>
        <item>Enea Bastianini</item>
        <item>Fabio Quartararo</item>
        <item>Franco Morbidelli</item>
        <item>Jack Miller</item>
        <item>Joan Mir</item>
        <item>Marq Marquez</item>
        <item>Jorge Martin</item>
        <item>Johann Zarco</item>
    </string-array>
    <string-array name="data_desc">
        <item>Álex Márquez Alentà (lahir di Cervera, 23 April 1996) adalah seorang pembalap motor Spanyol yang saat ini sedang berkompetisi di kejuaraan MotoGP. Dia memulai karier profesionalnya pada tahun 2012 (Moto3) dan 2014 (Moto2) dan memenangkan gelar juara dunia Moto3 pada periode 2014 dan Moto2 pada tahun 2019. Nomor pembalap yang dia gunakan adalah 73. Alex merupakan adik dari pembalap MotoGP Marc Marquez. </item>
        <item>Francesco "Pecco" Bagnaia (lahir di Turin, Italia, pada 14 Januari 1997) adalah seorang pembalap berkebangsaan Italia. Saat ini ia berkompetisi di MotoGP bersama Ducati Lenovo Team. Ia adalah Juara Dunia MotoGP musim 2022, 2023 dan sebelumnya menjadi Juara Dunia Moto2 pada tahun 2018.</item>
        <item>Brad Binder (lahir 11 Agustus 1995) adalah seorang pembalap sepeda motor Grand Prix Afrika Selatan. Pada November 2019, ia dikonfirmasi sebagai pebalap pabrik KTM di kelas MotoGP untuk musim 2020, menggantikan Johann Zarco yang meninggalkan pabrikannya di awal tahun.</item>
        <item>Enea Bastianini (lahir 30 Desember 1997) adalah pembalap Grand Prix Sepeda Motor yang mengendarai Avintia Esponsorama Racing di MotoGP. Dia memenangkan Moto2 musim 2020.</item>
        <item>Fabio Quartararo (lahir 20 April 1999) adalah pembalap sepeda motor Grand Prix Prancis yang saat ini membalap di MotoGP untuk Monster Energy Yamaha MotoGP. Sebelum karier Grand Prix-nya, Quartararo memenangkan enam gelar kejuaraan Spanyol, termasuk gelar CEV Moto3 berturut-turut pada 2013 dan 2014. Karena kesuksesannya di usia muda, ia dianggap sebagai "hal-hal besar",[1][2][3] bahkan ia dibandingkan dengan beberapa juara dunia seperti Marc Márquez dan telah memecahkan beberapa rekor selama naik ke level Kejuaraan Dunia. Pada tahun 2021 Fabio Quartararo menjadi juara dunia pertama kalinya dan Prancis pertama kalinya memenangkan kejuaraan papan atas.</item>
        <item>Franco Morbidelli memulai debut profesionalnya pada ajang European Superstock 600 di musim 2011, dan berhasil menjuarai kejuaraan tersubut di musim 2013 bersama San Carlo Team Italia Kawasaki.[1] Franco sempat mengikuti balapan dengan status wildcard bersama tim Federal Oil Gresini Moto2 di GP San Marino, GP Jepang, dan GP Valencia kejuaraan Moto2 2013.</item>
        <item>Jack Peter Miller (lahir tanggal 18 Januari 1995 di Townsville, Queensland, Australia) adalah seorang pembalap motor yang berasal dari Australia. ada 2019 Miller kini mengendarai GP19 saat ini setelah Petrucci pindah ke tim pabrikan Ducati. Rekan setim barunya adalah juara Moto2 Francesco Bagnaia. Musim dimulai dengan sangat kuat untuk Miller di Qatar, ia menyelesaikan kualifikasi ke-4, tetapi terpaksa mundur dalam balapan karena kursi patah saat berjuang untuk memimpin. </item>
        <item>Joan Mir Mayrata (lahir 1 September 1997) adalah seorang Pembalap motor Grand Prix Spanyol. Mir juga pernah menjadi pesaing di Red Bull MotoGP Rookies Cup dan CEV Moto3 Championship.[1] Dia memenangkan Kejuaraan Dunia Moto3 2017 dengan Leopard Racing. Mir menjadi juara dunia MotoGP 2020 Setelah melewati 7 podium dan 1 kemenangan di sepanjang musim 2020.</item>
        <item>Marc Márquez Alentà (lahir 17 Februari 1993) adalah seorang pembalap Grand Prix Sepeda Motor profesional Spanyol, yang membalap untuk Repsol Honda sejak debutnya di MotoGP pada tahun 2013. Lahir di Cervera, Catalonia, Spanyol, dia dijuluki Ant of Cervera di seluruh dunia (karena tingginya 1,68m), dan el tro de Cervera di kampung halamannya, yang berarti Guntur Cervera. Dia adalah salah satu dari empat pembalap yang memenangkan gelar juara dunia dalam tiga kategori berbeda, setelah Mike Hailwood, Phil Read dan Valentino Rossi, dan merupakan salah satu pembalap motor sepanjang masa yang paling sukses, dengan delapan Kejuaraan Dunia Grand Prix atas namanya, enam di antaranya berada di kelas utama.</item>
        <item>Jorge Martín Almoguera (lahir 29 Januari 1998) adalah pembalap motor asal Spanyol. Martín merupakan mantan juara Red Bull MotoGP Rookies Cup pada tahun 2014. Saat ini dia berkompetisi di kejuaraan Moto GP.</item>
        <item>Johann Zarco (lahir 16 Juli 1990) adalah pembalap motor Prancis, yang meraih dua gelar juara dunia Moto2 pada tahun 2015 dan 2016. Mulai musim 2017 dia akan menjalani debutnya di kelas MotoGP bersama tim Monster Yamaha Tech 3. Reale Avintia Ducati</item>
    </string-array>
    <integer-array name="data_img">
        <item>@drawable/alex</item>
        <item>@drawable/bagnaia</item>
        <item>@drawable/brad</item>
        <item>@drawable/enea</item>
        <item>@drawable/fabio</item>
        <item>@drawable/franco</item>
        <item>@drawable/jack</item>
        <item>@drawable/joan</item>
        <item>@drawable/marq</item>
        <item>@drawable/martin</item>
        <item>@drawable/zarco</item>
    </integer-array>
</resources>