<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    android:backgroundTint="@color/brown"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="429dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/itemPhoto"

            android:layout_width="330dp"
            android:layout_height="244dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_text_border"
            android:contentDescription="@string/upload_xray"
            android:padding="16dp"
            android:src="@drawable/baseline_image_24"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.489"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="Nama Pasien"
            card_view:layout_constraintEnd_toEndOf="@+id/itemPhoto"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="@+id/itemPhoto"
            card_view:layout_constraintTop_toBottomOf="@+id/itemPhoto" />

        <TextView
            android:id="@+id/tv_name"

            android:layout_width="208dp"
            android:layout_height="25dp"
            android:layout_marginTop="4dp"
            android:hint="@string/namapasientv"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textSize="20sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="@+id/textView"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="@+id/textView"
            card_view:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView2"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Usia"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_name"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="@+id/tv_name"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <TextView
            android:id="@+id/tv_classification_result"

            android:layout_width="348dp"
            android:layout_height="37dp"
            android:layout_marginTop="112dp"
            android:text="@string/hasil"
            android:textSize="20sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_gender"
            card_view:layout_constraintHorizontal_bias="1.0"
            card_view:layout_constraintStart_toStartOf="@+id/tv_age"
            card_view:layout_constraintTop_toBottomOf="@+id/itemPhoto" />

        <TextView
            android:id="@+id/tv_age"

            android:layout_width="52dp"
            android:layout_height="21dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/usiapasientv"
            android:inputType="number"
            android:textSize="20sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="@+id/textView2"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="@+id/textView2"
            card_view:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView5"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/kelamin"
            card_view:layout_constraintEnd_toEndOf="@+id/itemPhoto"
            card_view:layout_constraintHorizontal_bias="0.9"
            card_view:layout_constraintStart_toEndOf="@+id/textView"
            card_view:layout_constraintTop_toBottomOf="@+id/itemPhoto" />

        <TextView
            android:id="@+id/tv_gender"

            android:layout_width="79dp"
            android:layout_height="27dp"
            android:text="@string/kelaminpasien"
            android:textSize="20sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="@+id/textView5"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="@+id/textView5"
            card_view:layout_constraintTop_toBottomOf="@+id/textView5" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>
